vyne-query-service/src/main/web/src/app/code-viewer/error-list.component.scss
@import "src/theme";
:host {
  //background-color: rgba(0,0,0,0.25);
  color: $dark-list-item;
  overflow-y: auto;
  overflow-x: hidden;
  border-top: 1px solid rgba(255,255,255,0.2);
  font-size: 0.9rem;
}

.header {
  padding: 0.5rem 1rem;
  background-color: rgba(0,0,0,0.35);
  font-weight: bold;
}
.row {
  border-bottom: 1px solid rgba(255,255,255,0.15);
  padding: 0.5rem 1rem;
}

.position {
  margin-left: 0.5rem;
  opacity: 0.7;
}

.description-cell {
  width: 100%;
}
.position-cell {
  width: 200px;
  padding-right: 0.5rem;
}
td {
  padding: 0.25rem 1rem;
  border-bottom: 1px solid rgba(255,255,255,0.1);
}

.severity-cell {
  img {
    width: 22px;
  }
  .error {
    @extend .filter-error-light;
  }
  .warning {
    @extend .filter-warning-dark;
  }
}

